# bootmgr

./: Cargo.toml  README.md
.github/workflows/: workflow.yml
src/: interface.rs  main.rs
src/cli/: mod.rs
src/common/: file_operations.rs  mod.rs
src/win/: bcd_helper.rs  mod.rs  volume_helper.rs
