[package]
name = "bootmgr"
version = "0.1.1"
edition = "2024"

[dependencies]
regex = "1.12.2"
[dependencies.clap]
version = "4.5.54"
features = ["derive"]

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
